# GNKore

./: .env.sample  .gitignore  CHANGELOG.md  README.md  dev-notes.md  genomenotekore.py  pyproject.toml
.github/workflows/: lint.yml
src/data/: minimal_list.txt  test_list.txt
src/genomenotekore/: assembly.py  bioproject.py  generics.py  haplotype.py
