[project]
name = "genomenotekore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "regex>=2024.11.6",
    "requests>=2.32.3",
]

[package.optional-dependencies]
dev = [
    "ruff>=0.11.11",
]
